--- a/central-js/client/app/service/city/built-in/bankid.html
+++ b/central-js/client/app/service/city/built-in/bankid.html
@@ -190,12 +190,12 @@
                                        value="">
                             </div>
 
-                            <div class="col-md-4"
-                                 style="color:#a94442"
+                            <div class="col-md-4 validation-message"
                                  ng-if="form.$submitted"
                                  ng-messages="form[property.id].$error">
                                 <div ng-message="required">Необхідно заповнити.</div>
                                 <div ng-message="pattern">Значення має бути числом.</div>
+                                <div ng-message="email">Помилка в email.</div>
                             </div>
                         </div>
                         <div class="row">
@@ -207,7 +207,7 @@
                                         ng-hide="bSending(form)">
                                     Замовити послугу
                                 </button>
-                                <br><label ng-show="bSending(form)">зачекайте...</label>
+                                <br><label ng-show="bSending(form)">Зачекайте...</label>
                             </div>
                             <div class="col-md-4"></div>
                         </div>
