--- a/central-js/client/app/service/region/built-in/bankid.html
+++ b/central-js/client/app/service/region/built-in/bankid.html
@@ -168,6 +168,7 @@
                                  ng-messages="form[property.id].$error">
                                 <div ng-message="required">Необхідно заповнити.</div>
                                 <div ng-message="pattern">Значення має бути числом.</div>
+                                <div ng-message="email">Помилка в email.</div>
                             </div>
                         </div>
                         <div class="row">
